WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18030
REGRESSION(
r31236
): Space bar fails to scroll down page
https://bugs.webkit.org/show_bug.cgi?id=18030
Summary
REGRESSION(r31236): Space bar fails to scroll down page
Mike Bainter
Reported
2008-03-23 18:55:25 PDT
At any website, pressing the Space bar fails to scroll down page when using build
r31238
. Worked as expected in build
r31232
.
Attachments
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2008-03-23 21:39:16 PDT
Probably caused by
http://trac.webkit.org/projects/webkit/changeset/31236
.
Oliver Hunt
Comment 2
2008-03-23 21:53:46 PDT
Lalalala, fix is to revert the change to keydown handling.
Mark Rowe (bdash)
Comment 3
2008-03-24 14:39:12 PDT
***
Bug 18049
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 4
2008-03-24 14:40:24 PDT
<
rdar://problem/5816927
>
Mark Rowe (bdash)
Comment 5
2008-03-24 20:34:17 PDT
***
Bug 18054
has been marked as a duplicate of this bug. ***
Oliver Hunt
Comment 6
2008-03-24 21:37:21 PDT
Fixerated
r31274
Nick Valvo
Comment 7
2008-03-24 22:00:39 PDT
(In reply to
comment #6
)
> Fixerated
r31274
>
Thanks for the prompt follow-ups, Mark and Oliver. The produce of your "fixeration" is gratefully anticipated. By the way, I just noted that fn-space performs the expected action in
r31232
. Shift-fn-space pages up, just as one would anticipate.
Joshua Kwan
Comment 8
2008-03-25 02:18:10 PDT
***
Bug 18040
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug