Bug 18030: REGRESSION(r31236): Space bar fails to scroll down page <http://bugs.webkit.org/show_bug.cgi?id=18030>

Reviewed by Mark Rowe

Rollout keyDown changes from r31236 -- fix for keyDown behaviour is
tracked by Bug 18057: keyDown incorrectly propagates up the frame tree
<http://bugs.webkit.org/show_bug.cgi?id=18057>


git-svn-id: svn://svn.chromium.org/blink/trunk@31274 bbb929c8-8fbe-4397-9dbb-9b2b20218538